--- a/themes/positive/src/partials/education.hbs
+++ b/themes/positive/src/partials/education.hbs
@@ -2,19 +2,19 @@
 <hr>
 <section id="education">
   {{#> header-education }}
-    {{> header-icon _title="EDUCATION" _section="education" _hdricon=(lookup . '_icon') }}
+  {{> header-icon _title="EDUCATION" _section="education" _hdricon=(lookup . '_icon') }}
   {{/header-education}}
   {{#each r.education.history}}
-    {{#> body-education }}
-    <div>
-      <h3>{{#if title}}<em>{{{ title }}}</em>, {{/if}}{{{ institution }}}</h3>
-      <span class="tenure">{{dateRange .}}</span>
-      {{#if location}}<span class="location">{{location}}</span>{{/if}}
-      {{{ summary }}}
-      {{> highlights }}
-      {{#if curriculum}}<span class="keywords">{{#each curriculum}}{{{ . }}} {{/each}}</span>{{/if}}
-    </div>
-    {{/body-education}}
+  {{#> body-education }}
+  <div>
+    <h3>{{#if title}}<em>{{{ title }}}</em>, {{/if}}{{{ institution }}}</h3>
+    <span class="tenure">{{dateRange . "MM/YYYY"}}</span>
+    {{#if location}}<span class="location">{{location}}</span>{{/if}}
+    {{{ summary }}}
+    {{> highlights }}
+    {{#if curriculum}}<span class="keywords">{{#each curriculum}}{{{ . }}} {{/each}}</span>{{/if}}
+  </div>
+  {{/body-education}}
   {{/each}}
 </section>
 {{/section}}
