--- a/themes/positive/src/partials/service.hbs
+++ b/themes/positive/src/partials/service.hbs
@@ -2,11 +2,11 @@
 <hr>
 <section id="service">
   {{#> header-samples }}
-    {{> header-icon _title="SERVICE" _section="service" _hdricon=(lookup . '_icon') }}
+  {{> header-icon _title="SERVICE" _section="service" _hdricon=(lookup . '_icon') }}
   {{/header-samples}}
   {{#each r.service.history}}
-    {{#> body-service }}
-    <div>
+  {{#> body-service }}
+  <div>
     <h3><em>{{ position }}</em>,
       {{#if url}}
       <a href="{{{ url }}}">{{ organization }}</a>
@@ -14,12 +14,12 @@
       {{ organization }}
       {{/if}}
     </h3>
-    <span class="tenure">{{dateRange .}}</span>
+    <span class="tenure">{{dateRange . "MM/YYYY"}}</span>
     {{#if location}}<span class="location">{{location}}</span>{{/if}}
     <p>{{{ summary }}}</p>
     {{> highlights }}
-    </div>
-    {{/body-service }}
+  </div>
+  {{/body-service }}
   {{/each}}
 </section>
 {{/section}}
